public/css/responsive.css
/* Responsive Media Queries */

/* Medium screens */
@media screen and (max-width: 1120px) {
  #flex-div {
    flex-wrap: wrap;
    max-width: 800px;
  }
  .results-card {
    width: 45%;
    min-width: 300px;
  }
}

@media screen and (max-width: 740px) {
  #container {
    overflow-x: hidden;
  }
}

@media screen and (max-width: 673px) {
  #input0 {
    margin: 5px;
  }
  #b0 {
    margin-bottom: 0;
  }
}

@media screen and (max-width: 630px) {
  #flex-div {
    display: block;
  }
  #get-started .button,
  #get-started .btn-bottom {
    width: 100%;
    max-width: 280px;
    padding: 12px 20px;
    font-size: 1.1em;
  }
  .table {
    margin: 50px auto 0 auto;
    width: 100%;
    max-width: 350px;
  }
  .results-card {
    position: static;
    margin: 0 auto;
    max-width: 320px;
    width: 100%;
    min-width: auto;
  }
  html,
  body {
    overscroll-behavior-y: auto;
    background-attachment: scroll;
  }
  .household,
  #name-list {
    margin: 0 auto 12px;
    max-width: 320px;
  }
  .household h2,
  #name-list h2 {
    text-align: center;
  }
  #left-container.secret {
    #name-list {
      padding-bottom: 65px;
      & select {
        margin-top: 20px;
      }
    }
  }
  .ghost-house {
    margin: 0 auto 12px;
    max-width: 320px;
  }

}

@media screen and (max-width: 553px) {
  #flex-div {
    margin-top: 10px;
  }
}

@media screen and (max-width: 499px) {
  body {
    padding-bottom: 150px;
  }

  .shortcut {
    display: none;
  }
}

@media screen and (max-width: 429px) {
  #emailTable {
    min-width: 95%;
    margin: 0 5px;
  }
}

@media screen and (max-width: 625px) {
  #top-actions {
    flex-direction: column;
    align-items: stretch;
    padding: 0 10px;
  }
}

@media screen and (max-width: 339px) {
  #container {
    padding-left: 0;
    padding-right: 5px;
  }
  body {
    padding-bottom: 170px;
  }
  #generate,
  #secretGenerate {
    padding: 10px;
  }
  .table {
    min-width: auto;
  }
}

@media screen and (max-width: 337px) {
  #query {
    & div {
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }
  }
  #recipientSearchBtn {
    margin-top: 5px;
  }
}

